<resources>
    <string name="app_name">Coursus</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lbl_admin_panel">Panel de Administracion</string>
    <string name="btn_panel_user">Administrar Usuarios</string>
    <string name="btn_panel_cursos">Administrar Cursos</string>
    <string name="btn_asignar_curso">Asignar Cursos</string>
    <string name="title_activity_user_activitay">UserActivitay</string>
    <string name="title_activity_detalle_usuario">Detalle_usuario</string>
    <string name="detalle_usuario">Detalle Del Usuario</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="lbl_apellido">Apellido</string>
    <string name="lbl_cedula">Cedula</string>
    <string name="lbl_celular">Celular</string>
    <string name="lbl_titulo_agregar_user">Crear Nuevo Usuario</string>
    <string name="lbl_guardar">Guardar</string>
    <string name="lbl_limpiar">Limpiar</string>
    <string name="lbl_Cancelar">Cancelar</string>
    <string name="mensaje_correcto">Elemento Guardado Correctamente</string>
    <string name="titulo_eliminar_usuario">Eliminar usuario</string>
    <string name="mensaje_eliminr_user">Esta Seguro de eliminar este usuario ?</string>
    <string name="opcion_si">Si</string>
    <string name="opcion_no">No</string>
    <string name="title_activity_curso">CursoActivity</string>
    <string name="title_activity_detalle_curso">DetalleCurso</string>
    <string name="detalle_curso">Detalle Curso</string>
    <string name="lbl_categoria">Categoria</string>
    <string name="lbl_duracion">Duracion</string>
    <string name="lbl_titulo_agregar_curso">Crear Nuevo Curso</string>
    <string name="categoria_desarrollo">Desarrollo De Software</string>
    <string name="categoria_diseno">Diseño Web</string>
    <string name="categoria_contabilidad">Contabilidad</string>
    <string name="categoria_ingles">Ingles</string>
    <string name="lbl_titulo_comprar">Tienda de Cursos</string>
    <string name="seleccionDefould">Seleccione un curso</string>
</resources>