<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgregarCurso">

    <TextView
        android:id="@+id/lblTituloAgregarC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_titulo_agregar_curso"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgFotoSeleccionadaC"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10sp"
        app:srcCompat="@drawable/curso1" />


    <EditText
        android:id="@+id/txtNombreCurso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lbl_nombre"
        android:inputType="textPersonName"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"/>

    <TextView
        android:id="@+id/lblTituloCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_categoria"
        android:textColor="#8A8A8A"
        android:textSize="18sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"/>

    <CheckBox
        android:id="@+id/cbxDS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria_desarrollo"
        android:layout_marginStart="5dp"/>

    <CheckBox
        android:id="@+id/cbx_D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria_diseno"
        android:layout_marginStart="5dp"/>

    <CheckBox
        android:id="@+id/cbx_CT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria_contabilidad"
        android:layout_marginStart="5dp"/>

    <CheckBox
        android:id="@+id/cbx_EN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria_ingles"
        android:layout_marginStart="5dp"/>

    <EditText
        android:id="@+id/txtDuracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lbl_duracion"
        android:inputType="textPersonName"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGuardar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="guardar"
            android:text="@string/lbl_guardar" />

        <Button
            android:id="@+id/btnLimpiar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="limpiar"
            android:text="@string/lbl_limpiar" />

        <Button
            android:id="@+id/btnCancelar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_error"
            android:onClick="Cancelar"
            android:text="@string/lbl_Cancelar"
            android:textColorHighlight="#F44336"
            android:textColorLink="#E40D0D" />
    </LinearLayout>

</LinearLayout>
