<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgregarUsuario">

    <TextView
        android:id="@+id/lblTituloAgregarC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_titulo_agregar_user"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgFotoSeleccionada"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/persona" />

    <EditText
        android:id="@+id/txtCedula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lbl_cedula"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtNombreCurso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lbl_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lbl_apellido"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/txtDuracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lbl_celular"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGuardar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="guardar"
            android:text="@string/lbl_guardar" />

        <Button
            android:id="@+id/btnLimpiar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="limpiar"
            android:text="@string/lbl_limpiar" />

        <Button
            android:id="@+id/btnCancelar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_error"
            android:onClick="Cancelar"
            android:text="@string/lbl_Cancelar" />
    </LinearLayout>

</LinearLayout>
