<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/textView"
        android:layout_width="368dp"
        android:layout_height="38dp"
        android:layout_marginTop="52dp"
        android:text="@string/lbl_admin_panel"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAdminUser"
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:layout_marginTop="124dp"
        android:onClick="flowusuarios"
        android:text="@string/btn_panel_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnPanelCursos"
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:onClick="flowCursos"
        android:text="@string/btn_panel_cursos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdminUser" />

    <Button
        android:id="@+id/btnAsignarCurso"
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:onClick="flowCompra"
        android:text="@string/btn_asignar_curso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPanelCursos" />

</androidx.constraintlayout.widget.ConstraintLayout>