<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarCompras">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="226dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:text="@string/lbl_titulo_comprar"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCedulaCompra"
        android:layout_width="268dp"
        android:layout_height="51dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/lbl_cedula"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/spnCursosCompra"
        android:layout_width="266dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCedulaCompra" />

    <Button
        android:id="@+id/btnLimpiarCompra"
        android:layout_width="113dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:onClick="limpiar"
        android:text="@string/lbl_limpiar"
        app:layout_constraintStart_toEndOf="@+id/btnGuardarCompra"
        app:layout_constraintTop_toBottomOf="@+id/spnCursosCompra" />

    <Button
        android:id="@+id/btnGuardarCompra"
        android:layout_width="111dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="guardar"
        android:text="@string/lbl_guardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnCursosCompra" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="106dp"
        android:layout_height="46dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="@color/design_default_color_error"
        android:onClick="Cancelar"
        android:text="@string/lbl_Cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toEndOf="@+id/btnLimpiarCompra"
        app:layout_constraintTop_toBottomOf="@+id/spnCursosCompra" />

</androidx.constraintlayout.widget.ConstraintLayout>